feat 添加网关鉴权

--- a/data-analysis-eureka/pom.xml
+++ b/data-analysis-eureka/pom.xml
@@ -60,8 +60,26 @@
         </dependencies>
     </dependencyManagement>
 
+
     <build>
+
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>${project.name}</finalName>
+                    <!--填写启动类的路径-->
+                    <mainClass>com.analysis.dataanalysiseureka.DataAnalysisEurekaApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
