--- a/data-analysis-gateway/src/main/java/resources/bootstrap.yml
+++ b/data-analysis-gateway/src/main/java/resources/bootstrap.yml
@@ -1,12 +1,26 @@
 server:
+#  tomcat:
+#    max-swallow-size: -1
+#  max-http-header-size: 2MB
   port: 9003
 spring:
   application:
     name: data-analysis-gateway
   #  profiles:
   #    active: test
-
   cloud:
+    gateway:
+      routes:
+        - id: auth          # 路由的唯一标识
+          uri: http://localhost:9002  # 如果断言成功，将要转发去的地址
+          order: 0                    # 优先级，越小优先级越高
+          predicates: # 断言，满足所有断言，才会进行转发
+            - Path=/auth/**
+        - id: service           # 路由的唯一标识
+          uri: http://localhost:9001  # 如果断言成功，将要转发去的地址
+          order: 0                    # 优先级，越小优先级越高
+          predicates: # 断言，满足所有断言，才会进行转发
+            - Path=/api/**
     config:
       discovery:
         enabled: true
@@ -15,6 +29,12 @@ spring:
       uri: http://localhost:8762
       # 指定config server在服务发现中的serviceId，默认为：configserver
       name: config
+
+logging:
+  level:
+    root: DEBUG
+
+
 ---
 spring:
   config:
