feat 添加网关鉴权

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>data-analysis-eureka</module>
         <module>data-analysis-config</module>
         <module>data-analysis-gateway</module>
-        <module>data-analysis-security</module>
+        <module>data-analysis-auth</module>
     </modules>
     <dependencies>
         <dependency>
