--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <spring-cloud.version>2021.0.5</spring-cloud.version>
     </properties>
     <modules>
-        <module>data-analysis-service</module>
+        <module>data-analysis-collection-service</module>
         <module>data-analysis-eureka</module>
         <module>data-analysis-config</module>
         <module>data-analysis-gateway</module>
@@ -56,6 +56,12 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
