--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+application.yml
+*.env
 ### STS ###
 .apt_generated
 .classpath
 .factorypath
-.developerProjectEntity
+.developerProjectCollectionPO
 .settings
 .springBeans
 .sts4-cache
