--- a/data-analysis-collection-service/.gitignore
+++ b/data-analysis-collection-service/.gitignore
@@ -4,11 +4,14 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+
+application.yml
+*.env
 ### STS ###
 .apt_generated
 .classpath
 .factorypath
-.developerProjectEntity
+.developerProjectCollectionPO
 .settings
 .springBeans
 .sts4-cache
