--- a/data-analysis-collection-service/src/main/resources/application.yml
+++ b/data-analysis-collection-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ xxl:
       accessToken: default_token
     executor:
       appname: job-demo
-      logpath: E:\\xxl-job-2.4.0\\xxl-job-2.4.0\\log
+      logpath: /Users/xiuyi/Documents/bins/bins/xxl-job/log
       logretentiondays: 30
 
 eureka:
